force-app/main/default/objects/Property__c/fields/Acquisition_of_Units_with_Subsidies__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_of_Units_with_Subsidies__c</fullName>
    <label>Acquisition of Units with Subsidies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>