force-app/main/default/objects/Property__c/fields/Age_of_existing_building_s_in_yrs__c.field-meta.xml
<CustomField>
    <fullName>Age_of_existing_building_s_in_yrs__c</fullName>
    <label>Age of existing building(s) (in yrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>