force-app/main/default/objects/Property__c/fields/Air_Con_Sustainability_Certification__c.field-meta.xml
<CustomField>
    <fullName>Air_Con_Sustainability_Certification__c</fullName>
    <inlineHelpText>Air Conditioning System Sustainability Certification in Addition to EPA Energy Star? Please Detail</inlineHelpText>
    <label>Air Con Sustainability Certification</label>
    <type>TextArea</type>
</CustomField>