force-app/main/default/objects/Property__c/fields/Air_Conditioning_System__c.field-meta.xml
<CustomField>
    <fullName>Air_Conditioning_System__c</fullName>
    <label>Air Conditioning System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central Forced Air</fullName>
            </value>
            <value>
                <fullName>Window Units</fullName>
            </value>
            <value>
                <fullName>None Provided</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>