force-app/main/default/objects/Property__c/fields/All_or_part_in_100_yr_floodplain__c.field-meta.xml
<CustomField>
    <fullName>All_or_part_in_100_yr_floodplain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All or part in 100-yr. floodplain</label>
    <type>Checkbox</type>
</CustomField>