force-app/main/default/objects/Property__c/fields/Any_units_restricted_to_QPs__c.field-meta.xml
<CustomField>
    <fullName>Any_units_restricted_to_QPs__c</fullName>
    <label>Any units restricted to QPs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>