force-app/main/default/objects/Property__c/fields/Appliances__c.field-meta.xml
<CustomField>
    <fullName>Appliances__c</fullName>
    <label>Appliances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>