force-app/main/default/objects/Property__c/fields/Appliances_Sustainability_Certification__c.field-meta.xml
<CustomField>
    <fullName>Appliances_Sustainability_Certification__c</fullName>
    <inlineHelpText>Appliance Sustainability Certification in Addition to EPA Energy Star? Please Detail</inlineHelpText>
    <label>Appliances Sustainability Certification</label>
    <type>TextArea</type>
</CustomField>