force-app/main/default/objects/Property__c/fields/Arms_Length_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Arms_Length_Transaction__c</fullName>
    <label>Arms Length Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>