force-app/main/default/objects/Property__c/fields/AssetProperty__c.field-meta.xml
<CustomField>
    <fullName>AssetProperty__c</fullName>
    <label>Asset Property (CDA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Asset Property</fullName>
            </value>
            <value>
                <fullName>Pending Asset Property</fullName>
            </value>
            <value>
                <fullName>Non-Asset</fullName>
            </value>
            <value>
                <fullName>Former Asset Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>