force-app/main/default/objects/Property__c/fields/At_Risk_of_Homelessness__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_of_Homelessness__c</fullName>
    <label>At Risk of Homelessness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>