force-app/main/default/objects/Property__c/fields/Basement__c.field-meta.xml
<CustomField>
    <fullName>Basement__c</fullName>
    <label>Basement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Crawlspace</fullName>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>