force-app/main/default/objects/Property__c/fields/Buildings_Planned__c.field-meta.xml
<CustomField>
    <fullName>Buildings_Planned__c</fullName>
    <label>Buildings Planned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>