force-app/main/default/objects/Property__c/fields/Cable_Television_System__c.field-meta.xml
<CustomField>
    <fullName>Cable_Television_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cable Television System</label>
    <type>Checkbox</type>
</CustomField>