force-app/main/default/objects/Property__c/fields/Census_Track__c.field-meta.xml
<CustomField>
    <fullName>Census_Track__c</fullName>
    <label>Census Tract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1015.00</fullName>
            </value>
            <value>
                <fullName>1018.00</fullName>
            </value>
            <value>
                <fullName>1053.00</fullName>
            </value>
            <value>
                <fullName>1054.00</fullName>
            </value>
            <value>
                <fullName>1061.00</fullName>
            </value>
            <value>
                <fullName>1063.00</fullName>
            </value>
            <value>
                <fullName>1064.00</fullName>
            </value>
            <value>
                <fullName>1065.00</fullName>
            </value>
            <value>
                <fullName>1067.00</fullName>
            </value>
            <value>
                <fullName>1072.00</fullName>
            </value>
            <value>
                <fullName>1073.00</fullName>
            </value>
            <value>
                <fullName>1074.00</fullName>
            </value>
            <value>
                <fullName>1075.00</fullName>
            </value>
            <value>
                <fullName>1076.00</fullName>
            </value>
            <value>
                <fullName>1081.00</fullName>
            </value>
            <value>
                <fullName>1082.00</fullName>
            </value>
            <value>
                <fullName>1083.00</fullName>
            </value>
            <value>
                <fullName>1096.00</fullName>
            </value>
            <value>
                <fullName>1097.00</fullName>
            </value>
            <value>
                <fullName>1101.00</fullName>
            </value>
            <value>
                <fullName>1102.00</fullName>
            </value>
            <value>
                <fullName>1103.00</fullName>
            </value>
            <value>
                <fullName>1104.00</fullName>
            </value>
            <value>
                <fullName>1105.00</fullName>
            </value>
            <value>
                <fullName>1111.00</fullName>
            </value>
            <value>
                <fullName>1112.00</fullName>
            </value>
            <value>
                <fullName>1113.00</fullName>
            </value>
            <value>
                <fullName>1122.00</fullName>
            </value>
            <value>
                <fullName>1123.00</fullName>
            </value>
            <value>
                <fullName>1151.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>