force-app/main/default/objects/Property__c/fields/Commercial_sites__c.field-meta.xml
<CustomField>
    <fullName>Commercial_sites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial sites</label>
    <type>Checkbox</type>
</CustomField>