force-app/main/default/objects/Property__c/fields/Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>Construction_Type__c</fullName>
    <label>Construction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rehab</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>