force-app/main/default/objects/Property__c/fields/Creek_lake_river_frontage__c.field-meta.xml
<CustomField>
    <fullName>Creek_lake_river_frontage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creek, lake, river frontage</label>
    <type>Checkbox</type>
</CustomField>