force-app/main/default/objects/Property__c/fields/Current_Zoning_District__c.field-meta.xml
<CustomField>
    <fullName>Current_Zoning_District__c</fullName>
    <label>Current Zoning District</label>
    <type>TextArea</type>
</CustomField>