force-app/main/default/objects/Property__c/fields/Date_of_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Acquisition__c</fullName>
    <inlineHelpText>Date property or site was aquired</inlineHelpText>
    <label>Date of Acquisition</label>
    <type>Date</type>
</CustomField>