force-app/main/default/objects/Property__c/fields/Domestic_Violence_Sexual_Assault_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Violence_Sexual_Assault_Traffic__c</fullName>
    <label>Domestic Violence/Sexual Assault/Traffic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>