force-app/main/default/objects/Property__c/fields/Electric_ft_from_site__c.field-meta.xml
<CustomField>
    <fullName>Electric_ft_from_site__c</fullName>
    <label>Electric ft from site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>