force-app/main/default/objects/Property__c/fields/Electric_Power_System__c.field-meta.xml
<CustomField>
    <fullName>Electric_Power_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electric Power System</label>
    <type>Checkbox</type>
</CustomField>