force-app/main/default/objects/Property__c/fields/Equipment_Included__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Included__c</fullName>
    <inlineHelpText>Equipment Included with Income Restricted Units</inlineHelpText>
    <label>Equipment Included</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Microwave</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
            <value>
                <fullName>Kitchen Exhaust Duct</fullName>
            </value>
            <value>
                <fullName>Range &amp; Oven</fullName>
            </value>
            <value>
                <fullName>Ceiling Fans</fullName>
            </value>
            <value>
                <fullName>Common On-site Laundry</fullName>
            </value>
            <value>
                <fullName>Garbage Disposal</fullName>
            </value>
            <value>
                <fullName>Fireplace</fullName>
            </value>
            <value>
                <fullName>Security Alarm</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
            <value>
                <fullName>Blinds/Drapes</fullName>
            </value>
            <value>
                <fullName>Laundry Equipment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>