force-app/main/default/objects/Property__c/fields/Expiration_Date_of_Option_Contract__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_of_Option_Contract__c</fullName>
    <label>Expiration Date of Option/Contract</label>
    <type>Date</type>
</CustomField>