force-app/main/default/objects/Property__c/fields/Explain_the_relationship__c.field-meta.xml
<CustomField>
    <fullName>Explain_the_relationship__c</fullName>
    <inlineHelpText>Explain the relationship between buyer and seller.  Provide sales contract from last arms-length transaction.  If the sales contract cannot be provided at the initial application stage, it will be a requirement to receive a firm Financing Commitment.</inlineHelpText>
    <label>Explain the relationship</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>