force-app/main/default/objects/Property__c/fields/Exterior__c.field-meta.xml
<CustomField>
    <fullName>Exterior__c</fullName>
    <label>Exterior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wood Plank</fullName>
            </value>
            <value>
                <fullName>Brick</fullName>
            </value>
            <value>
                <fullName>Cement Board</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Stucco</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>