force-app/main/default/objects/Property__c/fields/Form_of_Site_Control__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Site_Control__c</fullName>
    <label>Form of Site Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer-owned</fullName>
            </value>
            <value>
                <fullName>Private Acquisition-not yet acquired</fullName>
            </value>
            <value>
                <fullName>CDA-Owned</fullName>
            </value>
            <value>
                <fullName>LRA-Owned</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
                <isActive>false</isActive>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Deed</fullName>
                <isActive>false</isActive>
                <label>Deed</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>