force-app/main/default/objects/Property__c/fields/Hazardous_waste_sites__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_waste_sites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous waste sites</label>
    <type>Checkbox</type>
</CustomField>