force-app/main/default/objects/Property__c/fields/Heating_Sustainability_Certification__c.field-meta.xml
<CustomField>
    <fullName>Heating_Sustainability_Certification__c</fullName>
    <inlineHelpText>Sustainability Certification in Addition to EPA Energy Star? Please Detail</inlineHelpText>
    <label>Heating Sustainability Certification</label>
    <type>TextArea</type>
</CustomField>