force-app/main/default/objects/Property__c/fields/Heating_System__c.field-meta.xml
<CustomField>
    <fullName>Heating_System__c</fullName>
    <label>Heating System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Central Forced Air</fullName>
            </value>
            <value>
                <fullName>Heat Pump</fullName>
            </value>
            <value>
                <fullName>Electric Baseboard</fullName>
            </value>
            <value>
                <fullName>Geothermal</fullName>
            </value>
            <value>
                <fullName>Radiator (hot water)</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>