force-app/main/default/objects/Property__c/fields/High_noise_levels__c.field-meta.xml
<CustomField>
    <fullName>High_noise_levels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High noise levels</label>
    <type>Checkbox</type>
</CustomField>