force-app/main/default/objects/Property__c/fields/High_tension_wires__c.field-meta.xml
<CustomField>
    <fullName>High_tension_wires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High tension wires</label>
    <type>Checkbox</type>
</CustomField>