force-app/main/default/objects/Property__c/fields/Homeless__c.field-meta.xml
<CustomField>
    <fullName>Homeless__c</fullName>
    <label>Homeless</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>