force-app/main/default/objects/Property__c/fields/Hot_Water_Sustainability_Certification__c.field-meta.xml
<CustomField>
    <fullName>Hot_Water_Sustainability_Certification__c</fullName>
    <inlineHelpText>Hot Water Sustainability Certification in Addition to EPA Energy Star? Please Detail</inlineHelpText>
    <label>Hot Water Sustainability Certification</label>
    <type>TextArea</type>
</CustomField>