force-app/main/default/objects/Property__c/fields/If_yes_indicate_the_kind_of_subsidy__c.field-meta.xml
<CustomField>
    <fullName>If_yes_indicate_the_kind_of_subsidy__c</fullName>
    <label>If yes, indicate the kind of subsidy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>