force-app/main/default/objects/Property__c/fields/If_yes_indicate_which_populations__c.field-meta.xml
<CustomField>
    <fullName>If_yes_indicate_which_populations__c</fullName>
    <label>If yes, indicate which populations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Elderly</fullName>
            </value>
            <value>
                <fullName>Previously Homeless</fullName>
            </value>
            <value>
                <fullName>Persons with HIV/AIDS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>