force-app/main/default/objects/Property__c/fields/Industrial_sites__c.field-meta.xml
<CustomField>
    <fullName>Industrial_sites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Industrial sites</label>
    <type>Checkbox</type>
</CustomField>