force-app/main/default/objects/Property__c/fields/Is_this_property_in_a_historic_district__c.field-meta.xml
<CustomField>
    <fullName>Is_this_property_in_a_historic_district__c</fullName>
    <label>Is this property in a historic district?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Historic</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>