force-app/main/default/objects/Property__c/fields/Mortgage_or_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_or_Loan_Balance__c</fullName>
    <label>Mortgage or Loan Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>