force-app/main/default/objects/Property__c/fields/National_or_City_historic_district__c.field-meta.xml
<CustomField>
    <fullName>National_or_City_historic_district__c</fullName>
    <inlineHelpText>Is this site or property in a National or City historic district?</inlineHelpText>
    <label>National or City historic district</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>