force-app/main/default/objects/Property__c/fields/Natural_Gas_Distribution_System__c.field-meta.xml
<CustomField>
    <fullName>Natural_Gas_Distribution_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Natural Gas Distribution System</label>
    <type>Checkbox</type>
</CustomField>