force-app/main/default/objects/Property__c/fields/Natural_Gas_ft_from_site__c.field-meta.xml
<CustomField>
    <fullName>Natural_Gas_ft_from_site__c</fullName>
    <label>Natural Gas ft from site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>