force-app/main/default/objects/Property__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <label>Neighborhood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academy/Sherman Park</fullName>
            </value>
            <value>
                <fullName>Baden</fullName>
            </value>
            <value>
                <fullName>Benton Park</fullName>
            </value>
            <value>
                <fullName>Benton Park West</fullName>
            </value>
            <value>
                <fullName>Bevo Mill</fullName>
            </value>
            <value>
                <fullName>Botanical Heights</fullName>
            </value>
            <value>
                <fullName>Boulevard Heights</fullName>
            </value>
            <value>
                <fullName>Carondelet</fullName>
            </value>
            <value>
                <fullName>Carr Square</fullName>
            </value>
            <value>
                <fullName>Central West End</fullName>
            </value>
            <value>
                <fullName>Cheltenham</fullName>
            </value>
            <value>
                <fullName>Clayton-Tamm</fullName>
            </value>
            <value>
                <fullName>Clifton Heights</fullName>
            </value>
            <value>
                <fullName>College Hill</fullName>
            </value>
            <value>
                <fullName>Columbus Square</fullName>
            </value>
            <value>
                <fullName>Compton Heights</fullName>
            </value>
            <value>
                <fullName>DeBaliviere Place</fullName>
            </value>
            <value>
                <fullName>Downtown</fullName>
            </value>
            <value>
                <fullName>Downtown West</fullName>
            </value>
            <value>
                <fullName>Dutchtown</fullName>
            </value>
            <value>
                <fullName>Ellendale</fullName>
            </value>
            <value>
                <fullName>Fairground</fullName>
            </value>
            <value>
                <fullName>Forest Park Southeast</fullName>
            </value>
            <value>
                <fullName>Fountain Park</fullName>
            </value>
            <value>
                <fullName>Fox Park</fullName>
            </value>
            <value>
                <fullName>Franz Park</fullName>
            </value>
            <value>
                <fullName>The Gate District</fullName>
            </value>
            <value>
                <fullName>Grand Center</fullName>
            </value>
            <value>
                <fullName>Gravois Park</fullName>
            </value>
            <value>
                <fullName>Greater Ville</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>