force-app/main/default/objects/Property__c/fields/New_Rehab__c.field-meta.xml
<CustomField>
    <fullName>New_Rehab__c</fullName>
    <label>New/Rehab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Rehab</fullName>
            </value>
            <value>
                <fullName>Downpayment Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>