force-app/main/default/objects/Property__c/fields/Not_residential_zoned_reasone__c.field-meta.xml
<CustomField>
    <fullName>Not_residential_zoned_reasone__c</fullName>
    <inlineHelpText>If no, please explain what steps have been or will be taken to obtain zoning approval</inlineHelpText>
    <label>Not residential zoned reasone</label>
    <type>TextArea</type>
</CustomField>