force-app/main/default/objects/Property__c/fields/noteworthy_positive_impact__c.field-meta.xml
<CustomField>
    <fullName>noteworthy_positive_impact__c</fullName>
    <inlineHelpText>Is there anything in proximity to the project that could have a noteworthy positive impact on the marketability of this development?  Please describe:</inlineHelpText>
    <label>noteworthy positive impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>