force-app/main/default/objects/Property__c/fields/Number_of_Low_Mod_Units_at_50__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Low_Mod_Units_at_50__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Low/Mod Units at 50%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>