force-app/main/default/objects/Property__c/fields/Number_of_Market_Rate_units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Market_Rate_units__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Market Rate units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>