force-app/main/default/objects/Property__c/fields/of_Accessible_Units_Planned__c.field-meta.xml
<CustomField>
    <fullName>of_Accessible_Units_Planned__c</fullName>
    <label># of Accessible Units Planned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>