force-app/main/default/objects/Property__c/fields/of_Adaptable_Units_Planned__c.field-meta.xml
<CustomField>
    <fullName>of_Adaptable_Units_Planned__c</fullName>
    <label># of Adaptable Units Planned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>