force-app/main/default/objects/Property__c/fields/Other_as_defined_in_the_NOFA__c.field-meta.xml
<CustomField>
    <fullName>Other_as_defined_in_the_NOFA__c</fullName>
    <label>Other (as defined in the NOFA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>