force-app/main/default/objects/Property__c/fields/Other_Population__c.field-meta.xml
<CustomField>
    <fullName>Other_Population__c</fullName>
    <label>Other Population</label>
    <length>255</length>
    <type>Text</type>
</CustomField>