force-app/main/default/objects/Property__c/fields/ParcelId__c.field-meta.xml
<CustomField>
    <fullName>ParcelId__c</fullName>
    <label>Parcel Id</label>
    <length>65</length>
    <type>Text</type>
</CustomField>