force-app/main/default/objects/Property__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <label>Parking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carport</fullName>
            </value>
            <value>
                <fullName>Parking Pad/Driveway</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>