force-app/main/default/objects/Property__c/fields/percent_Affordable_Units__c.field-meta.xml
<CustomField>
    <fullName>percent_Affordable_Units__c</fullName>
    <label>% Affordable Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>